--- a/css/main.css
+++ b/css/main.css
@@ -1733,7 +1733,6 @@ small {
   background-image: url("https://images.unsplash.com/photo-1541888946425-d81bb19240f5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
   background-size: cover;
   background-position: center;
-  margin-top: 0;
 }
 .hero__overlay {
   position: absolute;
@@ -1750,7 +1749,18 @@ small {
   z-index: 2;
 }
 .hero__content {
-  max-width: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 1rem;
+  max-width: 100%;
   color: #ffffff;
   opacity: 0;
   -webkit-transform: translateY(30px);
@@ -1760,37 +1770,104 @@ small {
   -webkit-animation-delay: 0.5s;
           animation-delay: 0.5s;
 }
-.hero__title {
-  font-size: 2.25rem;
+@media (min-width: 768px) {
+  .hero__content {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+.hero__head-p {
+  max-width: 450px;
+  color: white;
+  padding: 2rem 1rem;
+  margin: 0 auto;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .hero__head-p {
+    text-align: left;
+    padding: 0;
+    margin: 0;
+  }
+}
+.hero__head-p h1 {
+  color: white;
   margin-bottom: 1rem;
-  color: #ffffff;
 }
-@media (min-width: 768px) {
-  .hero__title {
-    font-size: 3rem;
-  }
-}
-.hero__title span {
+.hero__head-p h1 .headline-main {
+  font-weight: 500;
+  font-size: clamp(29px, 6vw, 60px);
+  line-height: 1.1;
   display: block;
-  color: #4caf50;
 }
-.hero__subtitle {
-  font-size: 1.125rem;
-  margin-bottom: 2rem;
-  line-height: 1.625;
+.hero__head-p h1 .headline-sub {
+  font-weight: 400;
+  font-size: clamp(22px, 4vw, 30px);
+  line-height: 1.2;
+  display: block;
+}
+.hero__head-p h1 .headline-sub small {
+  font-size: 0.8em;
+  opacity: 0.8;
+}
+.hero__head-p hr {
+  width: 80px;
+  border: none;
+  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  margin: 0 auto;
 }
 @media (min-width: 768px) {
-  .hero__subtitle {
-    font-size: 1.25rem;
+  .hero__head-p hr {
+    margin: 1.5rem 0;
   }
+}
+.hero__head-p p {
+  margin: 0.5rem 0;
+  font-size: clamp(16px, 2.5vw, 17px);
+  line-height: 1.6;
+}
+.hero__head-p p .vid {
+  font-size: clamp(22px, 4vw, 30px);
+}
+.hero__head-p p span {
+  font-size: inherit;
+}
+.hero__head-p p span b {
+  font-size: clamp(26px, 5vw, 46px);
+  font-weight: 700;
+}
+.hero__head-p p s {
+  font-size: clamp(16px, 3vw, 20px);
+  opacity: 0.6;
+  margin-left: 8px;
 }
 .hero__buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1rem;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (min-width: 768px) {
+  .hero__buttons {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 @-webkit-keyframes fadeInUp {
